--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width ,initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <title>Netflix</title>
-<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="style.css">
 <!-- font awesome link -->
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous"/>
 
@@ -197,6 +197,6 @@
         </div>
     </div>
 </footer>
-   <script src="/html/script.js"></script>
+   <script src="script.js"></script>
     </body>
 </html>
