--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="header-top">
                     <!-- means logo and this english select box -->
                     <div class="header-logo">
-                        <img src="/images/Netflix_2015_logo.svg.png">
+                        <img src="images/Netflix_2015_logo.svg.png">
                     </div>
                     <div class="header-select">
                         <select>
@@ -52,9 +52,9 @@
                     <h5>Download your shows to watch offline</h5>
                     </div>
                     <div class="column-img">
-                        <img src="/images/tv.png">
+                        <img src="images/tv.png">
                         <video autoplay loop>
-                            <source src="/video tv.m4v">
+                            <source src="video tv.m4v">
                         </video>
                     </div>
                 </div>
@@ -63,7 +63,7 @@
                 <div class="column1">
 
                     <div class="column-img">
-                        <img src="/images/mobile-0819.jpg">
+                        <img src="images/mobile-0819.jpg">
                      
                     </div>
                     <div class="column-text">
@@ -79,9 +79,9 @@
                     <h5>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</h5>
                     </div>
                     <div class="image">
-                        <img src="/images/device-pile-in.png">
+                        <img src="images/device-pile-in.png">
                         <video autoplay loop>
-                            <source src="/video-devices-in.m4v">
+                            <source src="video-devices-in.m4v">
                         </video>
                     </div>
                 </div>
@@ -89,7 +89,7 @@
             <div class="flex-columns">
                 <div class="column1">
                     <div class="column-img">
-                        <img src="/images/AAAABVr8nYuAg0xDpXDv0VI9HUoH7r2aGp4TKRCsKNQrMwxzTtr-NlwOHeS8bCI2oeZddmu3nMYr3j9MjYhHyjBASb1FaOGYZNYvPBCL.png">
+                        <img src="images/AAAABVr8nYuAg0xDpXDv0VI9HUoH7r2aGp4TKRCsKNQrMwxzTtr-NlwOHeS8bCI2oeZddmu3nMYr3j9MjYhHyjBASb1FaOGYZNYvPBCL.png">
                        
                     </div>
                     <div class="column-text">
