--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!-- for script to run means javascript -->
 <meta name="viewport" content="width=device-width ,initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>Netflix</title>
+<title>Netflix Clone</title>
 <link rel="stylesheet" href="style.css">
 <!-- font awesome link -->
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous"/>
@@ -23,7 +23,7 @@
                     <div class="header-select">
                         <select>
                             <option value="english">English</option>
-                            <option value="hindi">Hindi</option>
+                            <option value="Vietnamese">Vietnamese</option>
                         </select>
                         <button>Sign Up</button>
                     </div>
